Add featured tag and navigation variable to the YAML front matter for the test event and test post.

--- a/_posts/2013-07-16-test-post.md
+++ b/_posts/2013-07-16-test-post.md
@@ -1,7 +1,11 @@
 ---
 layout: post
 title: "Test Post"
-description: ""
-category: blog
-tags: []
+category: post 
+tags: [
+        featured
+]
+navigation: post 
 ---
+
+
